--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>platzi-exchange</title>
-  </head>
-  <body>
+    <link rel="icon" href="<%= BASE_URL %>favicon(2).ico">
+    <title>Bit Coin</title>
+</head>
+
+<body>
     <noscript>
-      <strong>We're sorry but platzi-exchange doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Proyecto para aprender VueJs, tambien sirve para saber los precios de las monedas virtuales.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
